--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@storybook/node-logger": "^6.3.12",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.12",
+    "@uxpin/merge-cli": "^2.7.9",
     "eslint": "^7.32.0",
     "eslint-config-freee-typescript": "^0.3.0",
     "eslint-config-prettier": "^8.3.0",
