add github actions

--- a/package.json
+++ b/package.json
@@ -82,8 +82,9 @@
     "test": "node scripts/test.js",
     "lint": "eslint src",
     "format": "prettier --write src",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "storybook": "start-storybook -p 6006 -s storybook_public",
+    "build-storybook": "build-storybook -s storybook_public",
+    "uxpin-push": "NODE_ENV=development $(npm bin)/uxpin-merge push"
   },
   "eslintConfig": {
     "extends": [
